--- a/index.html
+++ b/index.html
@@ -7,40 +7,66 @@
     <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Registrar usuario</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <button id="contrastToggle" class="toRight">Alto contraste</button><br>
-
-    <h1 class="titulo kanit-bold">Registrar usuario</h1>
-
-    <form class="customForm center" action="usuario_registrado.html" onsubmit="return validacion()">
-        <p class="warning">Los campos con (*) son obligatorios</p>
-
-        <label class="labelField" for="username">Nombre de usuario <span class="warning">*</span></label>
-        <input type="text" id="username" name="username" placeholder="Introduzca su nombre de usuario">
-        <span id="usernameError" class="error-message"></span><br><br>
-
-        <label class="labelField" for="email">Correo electrónico <span class="warning">*</span></label>
-        <input type="email" id="email" name="email" placeholder="Introduzca su correo electrónico">
-        <span id="emailError" class="error-message"></span><br><br>
-
-        <label class="labelField" for="dateOfBirth">Fecha de nacimiento <span class="warning">*</span></label>
-        <input type="date" id="dateOfBirth" name="dateOfBirth" placeholder="Introduzca su fecha de nacimiento">
-        <span id="dateOfBirthError" class="error-message"></span><br><br>
-
-        <label class="labelField" for="password">Contraseña <span class="warning">*</span></label>
-        <input type="password" id="password" name="password" placeholder="Introduzca su contraseña">
-        <span id="passwordError" class="error-message"></span><br><br>
-
-        <label class="labelField" for="passwordRepeated">Repetir contraseña <span class="warning">*</span></label>
-        <input type="password" id="passwordRepeated" name="passwordRepeated" placeholder="Introduzca su contraseña nuevamente">
-        <span id="passwordRepeatedError" class="error-message"></span><br><br>
-
-        <div class="center">
-            <input type="submit" value="Registrarse">
+    <div class="row mt-4">
+        <div class="col-md-4"></div>
+        <div class="col-md-5"></div>
+        <div class="col-md-3 d-flex justify-content-center">
+            <button class="btn btn-danger fw-bold" id="contrastToggle">Alto contraste</button><br>
         </div>
-    </form>
+    </div>
+
+    <h1 class="titulo kanit-bold mt-3">Registrar usuario</h1>
+
+    <div class="container-fluid mb-5">
+        <div class="row d-flex justify-content-center mb-5">
+            <div class="col-md-3">
+                <form class="p-3 rounded bg-light" action="usuario_registrado.html" onsubmit="return validacion()">
+        
+                    <p class="fw-bold text-danger">Los campos con (*) son obligatorios</p>
+
+                    <div class="form-group mb-4">
+                        <label for="username" class="form-label fw-bold">Nombre de usuario <span class="text-danger">*</span></label>
+                        <input class="form-control" type="text" id="username" name="username" placeholder="Introduzca su nombre de usuario">
+                        <span id="usernameError" class="error-message kanit-medium text-danger"></span>
+                    </div>
+
+                    <div class="form-group mb-4">
+                        <label class="form-label fw-bold" for="email">Correo electrónico <span class="text-danger">*</span></label>
+                        <input class="form-control" type="email" id="email" name="email" placeholder="Introduzca su correo electrónico">
+                        <span id="emailError" class="error-message kanit-medium text-danger"></span>
+                    </div>
+
+                    <div class="form-group mb-4">
+                        <label class="form-label fw-bold" for="dateOfBirth">Fecha de nacimiento <span class="text-danger">*</span></label>
+                        <input class="form-control" type="date" id="dateOfBirth" name="dateOfBirth" placeholder="Introduzca su fecha de nacimiento">
+                        <span id="dateOfBirthError" class="error-message kanit-medium text-danger"></span>
+                    </div>
+
+                    <div class="form-group mb-4">
+                        <label class="form-label fw-bold" for="password">Contraseña <span class="text-danger">*</span></label>
+                        <input class="form-control" type="password" id="password" name="password" placeholder="Introduzca su contraseña">
+                        <span id="passwordError" class="error-message kanit-medium text-danger"></span>
+                    </div>
+
+                    <div class="form-group mb-4">
+                        <label class="form-label fw-bold" for="passwordRepeated">Repetir contraseña <span class="text-danger">*</span></label>
+                        <input class="form-control" type="password" id="passwordRepeated" name="passwordRepeated" placeholder="Introduzca su contraseña nuevamente">
+                        <span id="passwordRepeatedError" class="error-message kanit-medium text-danger"></span>
+                    </div>
+
+                    <div class="d-flex justify-content-center">
+                        <button class="btn btn-danger fw-bold" type="submit">Registrarse</button>
+                    </div>
+            
+                </form>
+            </div>
+        </div>  
+    </div>
 
     <script src="code.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
